# JUCECmakePrototype

./: CMakeLists.txt
LevelMatch/: CMakeLists.txt
LevelMatch/Source/: BiquadCascade.cpp  BiquadCascade.h  DspHelpers.cpp  DspHelpers.h  Gain.cpp  Gain.h  LanczosResampler.cpp  LanczosResampler.h  LoudnessEstimator.cpp  LoudnessEstimator.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PowerEstimator.cpp  PowerEstimator.h
Modules/shared_plugin_helpers/ProcessorBase/: ProcessorBase.cpp  ProcessorBase.h
